applications/namespaces/default/ping-test/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ping-test
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: ping-test
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: victoria-metrics-single
            io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "2112"
  egress:
    - toFQDNs:
        - matchName: checkip.amazonaws.com
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
